# fastapi-template

./: .dockerignore  .env  .gitignore  Makefile  README.md  crud.py  database.py  docker-compose.yaml  main.py  models.py  pyproject.toml  requirements.txt
.github/actions/setup-python/: action.yaml
.github/workflows/: actionlint.yaml  lint-python.yaml  workflow.yaml
app/: Dockerfile  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  test_main.py
app/accounts/: router.py
app/accounts/usecases/: create_accounts_usecase.py
app/recommendations/: router.py
app/recommendations/usecases/: create_answers_usecase.py
app/schemas/: account_schema.py  answer_schema.py
app/tests/: conftest.py  test_main.py
app/tests/accounts/: test_create_accounts_usecase.py  test_router.py
app/tests/recommendations/: test_create_answers_usecase.py  test_request.py  test_router.py
app/tests/usecases/: test_create_account_usecases.py  test_create_accounts_usecase.py  test_create_answers_usecase.py
app/usecases/: create_account_usecase.py  create_accounts_usecase.py  create_answers_usecase.py
db/: alembic.ini
db/development/: env.py
db/development/versions/: 710a1ba0608a_add_answers.py  d395b12f93db_create_accounts.py
db/docker-entrypoint-initdb.d/: 001_create_test_database.sql
db/test/: import_schema.sh  insert_seeds.sh
