[tool.poetry]
name = "new-cale"
version = "0.1.0"
description = ""
authors = ["youichiro <cinnamon416@gmail.com>"]
readme = "README.md"
packages = [{include = "new_cale"}]

[tool.poetry.dependencies]
python = "3.11.1"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^2.0.0"
mysqlclient = "^2.1.1"
alembic = "^1.9.2"


[tool.poetry.group.test.dependencies]
httpx = "^0.23.3"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
