[tool.poetry]
name = "new-cale"
version = "0.1.0"
description = ""
authors = ["youichiro <cinnamon416@gmail.com>"]
readme = "README.md"
packages = [{include = "new_cale"}]


[tool.flake8]
max-line-length = 140
max-complexity = 10
extend-ignore = ["E203"]
exclude = "db/"


[tool.black]
line-length = 140
exclude = '''
(
    db
    | .mypy_cache
    | .pytest_cache
)
'''


[tool.isort]
profile = "black"
line_length = 140
skip = ["db"]


[tool.poetry.dependencies]
python = "3.11.1"
fastapi = "^0.89.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
sqlalchemy = "^2.0.0"
mysqlclient = "^2.1.1"
alembic = "^1.9.2"


[tool.poetry.group.test.dependencies]
httpx = "^0.23.3"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
mypy = "^0.991"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
